prod/minikube-aws/set-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postcard-api
spec:
  replicas: 1
