prod/minikube-aws/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: postcard-minio
spec:
  selector:
    app: postcard-minio
  ports:
    - protocol: TCP
      port: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postcard-minio
  labels:
    app: postcard-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postcard-minio
  template:
    metadata:
      labels:
        app: postcard-minio
    spec:
      containers:
        - name: postcard-minio
          image: postcard-minio
          command: ['/usr/bin/docker-entrypoint.sh']
          args: ['minio', 'server', '/data']
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /data
              name: minio-data
            - name: postcard-secret
              mountPath: '/run/secrets/POSTCARD_S3_ACCESS_KEY'
              readOnly: true
              subPath: POSTCARD_S3_ACCESS_KEY
            - name: postcard-secret
              mountPath: '/run/secrets/POSTCARD_S3_SECRET_ACCESS_KEY'
              readOnly: true
              subPath: POSTCARD_S3_SECRET_ACCESS_KEY
      volumes:
        - name: minio-data
          emptyDir: {}
        - name: postcard-secret
          secret:
            secretName: postcard-secret
            items:
              - key: POSTCARD_S3_ACCESS_KEY
                path: POSTCARD_S3_ACCESS_KEY
              - key: POSTCARD_S3_SECRET_ACCESS_KEY
                path: POSTCARD_S3_SECRET_ACCESS_KEY
