prod/minikube-aws/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postcard-postgres
spec:
  type: ExternalName
  externalName: postcard-staging.clzvlevww9fo.eu-west-1.rds.amazonaws.com
