prod/minikube-aws/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: postcard-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
    nginx.ingress.kubernetes.io/proxy-send-timeout: 3600
spec:
  rules:
    - host: minikube
      http:
        paths:
          - path: /v1
            backend:
              serviceName: postcard-api
              servicePort: 8080
          - path: /v1/endpoints
            backend:
              serviceName: postcard-wss
              servicePort: 8080
